# Chess

./: .gitignore  CMakeLists.txt  CMakePresets.json  Main.cpp
include/: Behavior.h
modules/: Behaviour.h  CollisionDetection.h  Engine.h  IconLoader.h  InitializeCamera.h  Mouse.h  MouseHandler.h  Piece.h  PiecePlacer.h  Point.h  TileCreator.h  TileLoader.h
res/: Class.snippet
res/Smooth_Sliding_objects/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Smooth_Sliding_objects.sln
